add main user flow

--- a/house-of-mystery/src/components/TitleScreen/TitleScreen.css
+++ b/house-of-mystery/src/components/TitleScreen/TitleScreen.css
@@ -1,4 +1,6 @@
 .title-screen {
+  width: 100vw;
+  height: 100vh;
   background-image: url("../../assets/Desktop/Title Screen.png");
   background-size: cover;
   background-position: center;
