--- a/house-of-mystery/src/index.css
+++ b/house-of-mystery/src/index.css
@@ -17,6 +17,11 @@ code {
     monospace;
 }
 
+h1, h2, h3 {
+  margin: 0;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+}
+
 html, body, #root {
   /* height: 750px; force height
   margin: 0;
