--- a/house-of-mystery/src/components/GameScreen/GameScreen.css
+++ b/house-of-mystery/src/components/GameScreen/GameScreen.css
@@ -13,6 +13,15 @@
   object-fit: cover;
 }
 
+.shelves-img {
+    position: absolute;
+    bottom: 3%;
+    width: 30rem;
+    display: flex;
+    flex-direction: column;
+    justify-self: end;
+}
+
 .cauldron {
   position: absolute;
   top: 20%;
@@ -33,27 +42,43 @@
   color: white;
 }
 
+.chewbie-cauldron {
+  position: absolute;
+  bottom: 7%;
+  right: 50%;
+  width: 20%;
+  display: flex;
+  flex-direction: column;
+  z-index: 2;
+  align-items: end;
+}
+
 .shelves {
   position: absolute;
-  bottom: 15%;
+  bottom: 7%;
+  right: 3%;
   width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
-  align-items: center;
   z-index: 2;
+  align-items: end;
 }
 
 .shelf {
   display: flex;
   justify-content: center;
-  gap: 2rem;
+  margin-bottom: -10px;
+}
+
+.shelf .potion-icon:last-child {
+  margin-right: 0;
 }
 
 .potion-icon {
-  width: 80px;
+  width: 120px;
   cursor: pointer;
   transition: transform 0.2s ease;
+  margin-right: -33px;
 }
 
 .potion-icon:hover {
