--- a/house-of-mystery/src/index.css
+++ b/house-of-mystery/src/index.css
@@ -1,5 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;900&display=swap');
 
+@font-face {
+  font-family: "Cocon Pro";
+  src: url("./assets/fonts/Cocon Pro.woff2") format("woff2"),
+       url("./assets/fonts/Cocon Pro.woff") format("woff");
+  font-weight: 700; /* or 'bold' */
+  /* font-stretch: condensed; */
+  font-style: normal;
+}
+
 #root {
   height: 100vh;
 }
@@ -8,7 +17,8 @@ body {
   background-color: #FFF;
   margin: 0;
   min-height: 100vh;
-  font-family: 'Montserrat', sans-serif;
+  /* font-family: 'Montserrat', sans-serif; */
+  font-family: "Cocon Pro", sans-serif;
   -moz-osx-font-smoothing: grayscale;
 }
 
