--- a/house-of-mystery/src/components/TitleScreen/TitleScreen.css
+++ b/house-of-mystery/src/components/TitleScreen/TitleScreen.css
@@ -19,16 +19,10 @@
 }
 
 .mystery-char {
-  max-width: 35%; /* keep character smaller than content */
+  max-width: 40%;
   height: auto;
   object-fit: contain;
 }
-
-/* .content-container img {
-  max-width: 800px;
-  height: auto;
-  margin: 1rem 0;
-} */
 
 .mystery-logo {
   max-width: 32vw;
