--- a/house-of-mystery/src/index.css
+++ b/house-of-mystery/src/index.css
@@ -33,15 +33,15 @@ h1, h2, h3 {
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
 }
 
-html, body, #root {
-  /* height: 750px; force height
+/* html, body, #root {
+  height: 750px; 
   margin: 0;
   padding: 0;
-  overflow: hidden; prevent scrolling */
+  overflow: hidden;
 }
 
 @media (min-width: 1023px) {
   html, body, #root {
-    /* height: 850px; */
+    height: 950px;
   }
-}
+} */
