--- a/house-of-mystery/src/components/RulesScreen/RulesScreen.css
+++ b/house-of-mystery/src/components/RulesScreen/RulesScreen.css
@@ -15,20 +15,20 @@
   flex-direction: column;
   gap: 1rem;
   text-align: center;
-  padding: 0 7rem;
+  padding: 1rem 7rem;
   line-height: 1.5;
 }
 
 .rules-container h1 {
-  font-size: clamp(2rem, 3.5vw, 3rem);
+  font-size: clamp(2rem, 5vw, 3rem);
 }
 
 .rules-container h2 {
-  font-size: clamp(1.5rem, 2.6vw, 2.25rem);
+  font-size: clamp(1.5rem, 3.5vw, 2.25rem);
 }
 
 .rules-container h3 {
-  font-size: clamp(1.2rem, 1.6vw, 1.75rem);
+  font-size: clamp(1.2rem, 2vw, 1.75rem);
 }
 
 
