--- a/house-of-mystery/src/components/FormScreen/FormScreen.css
+++ b/house-of-mystery/src/components/FormScreen/FormScreen.css
@@ -16,15 +16,16 @@
 /* === Chewbie and Related Elements === */
 .form-chewbie-wrapper {
   position: absolute;
-  left: 30%;      /* horizontal center */
+  left: 30%;
   transform: translateX(-50%);
-  width: 35%;     /* controls overall chewbie size */
+  width: 43%;
   display: flex;
   justify-content: center;
   align-items: center;
   align-self: anchor-center;
-
   z-index: 2;
+  margin-left: -25px;
+  margin-bottom: -10rem;
 }
 
 .form-content-container {
