--- a/house-of-mystery/src/components/GameScreen/GameScreen.css
+++ b/house-of-mystery/src/components/GameScreen/GameScreen.css
@@ -15,9 +15,9 @@
 
 .shelves-img {
     position: absolute;
-    bottom: 3%;
-    right: 7%;
-    width: 30rem;
+    bottom: 5%;
+    right: -4%;
+    width: 36rem;
     display: flex;
     flex-direction: column;
     justify-self: end;
@@ -25,8 +25,8 @@
 
 .shelves {
   position: absolute;
-  bottom: 7%;
-  right: 10%;
+  bottom: 8%;
+  right: 2.2%;
   width: 35%;
   display: flex;
   flex-direction: column;
@@ -45,10 +45,10 @@
 }
 
 .potion-icon {
-  width: 120px;
+  width: 140px;
   cursor: pointer;
   transition: transform 0.2s ease;
-  margin-right: -33px;
+  margin-right: -45px;
 }
 
 .potion-icon:hover {
@@ -81,14 +81,16 @@
 /* === Chewbie and Related Elements === */
 .chewbie-wrapper {
   position: absolute;
-  left: 30%;      /* horizontal center */
+  left: 30%;
   transform: translateX(-50%);
-  width: 35%;     /* controls overall chewbie size */
+  width: 43%;
   display: flex;
   justify-content: center;
   align-items: center;
   align-self: anchor-center;
   z-index: 2;
+  margin-left: -25px;
+  margin-bottom: -10rem;
 }
 
 /* Base cauldron image */
